--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="lightBackground">#D5D3D3</color>
     <color name="colorRed">#FF0000</color>
     <color name="colorGreen">#41C300</color>
+    <color name="blue">#2977E8</color>
+    <color name="Grey">#c3c3c3 </color>
 </resources>
